# 6502

./: .gitignore  6502.cc  6502.h  6502_tests.cc  CMakeLists.txt  Makefile  README.md  apple1.cc  debug.cc  ins.cc  instructions.cc  memory.cc  memory.h  opcode_map.cc  opcodes_6502.txt  process_opcodes.pl  run6502.cc
.github/workflows/: c-cpp.yml  codeql.yml
6502/: 6502.cc  6502.h  CMakeLists.txt  debug.cc  debug_commands.cc  debugger.cc  debugger.h  debugger_commands.cc  disassembler.cc  instructions.cc  opcode_map.cc  opcodes_6502.txt  process_opcodes.pl  utils.cc  utils.h
65C02/: 65C02.cc  65C02.h  CMakeLists.txt  opcodes_65C02.txt
apple1/: 65C02-apple1.cc  CMakeLists.txt  Makefile  apple1.cc  apple1.h  mos6820.h  posix.cc  windows.cc
binfiles/: README  program.hex  sampleprg.a65
clock/: clock.h
memory/: memory.h
src/: 6502.cc  6502.h  CMakeLists.txt  Makefile  clock.h  debug.cc  instructions.cc  memory.h  opcode_map.cc  process_opcodes.pl
tests/: 6502_tests_adc.cc  6502_tests_and.cc  6502_tests_asl.cc  6502_tests_bit.cc  6502_tests_branches.cc  6502_tests_brk.cc  6502_tests_cmp.cc  6502_tests_dec_dex_dey.cc  6502_tests_eor.cc  6502_tests_flags.cc  6502_tests_inc_inx_iny.cc  6502_tests_init.cc  6502_tests_interrupt.cc  6502_tests_invalid_instruction.cc  6502_tests_jmp.cc  6502_tests_jsr.cc  6502_tests_lda_ldy_ldx.cc  6502_tests_load_program.cc  6502_tests_lsr.cc  6502_tests_nop.cc  6502_tests_ora.cc  6502_tests_pushpop.cc  6502_tests_rol_ror.cc  6502_tests_rti.cc  6502_tests_rts.cc  6502_tests_setup.cc  6502_tests_tx_ty.cc  6502_tests_xxx_functional_test_suite.cc  CMakeLists.txt  Makefile  clock_tests.cc  memory_tests.cc
tests/6502/: 6502_tests_adc.cc  6502_tests_and.cc  6502_tests_asl.cc  6502_tests_bit.cc  6502_tests_branches.cc  6502_tests_brk.cc  6502_tests_cmp.cc  6502_tests_dec_dex_dey.cc  6502_tests_eor.cc  6502_tests_flags.cc  6502_tests_functional_test_suite.cc  6502_tests_inc_inx_iny.cc  6502_tests_interrupt.cc  6502_tests_invalid_instruction.cc  6502_tests_jmp.cc  6502_tests_jsr.cc  6502_tests_lda_ldy_ldx.cc  6502_tests_load_program.cc  6502_tests_lsr.cc  6502_tests_nop.cc  6502_tests_ora.cc  6502_tests_pushpop.cc  6502_tests_rol_ror.cc  6502_tests_rti.cc  6502_tests_rts.cc  6502_tests_tx_ty.cc  6502_tests_xxx_functional_test_suite.cc  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/65C02/: 65C02_tests_adc.cc  65C02_tests_and.cc  65C02_tests_asl.cc  65C02_tests_bit.cc  65C02_tests_branches.cc  65C02_tests_brk.cc  65C02_tests_cmp.cc  65C02_tests_dec_dex_dey.cc  65C02_tests_eor.cc  65C02_tests_flags.cc  65C02_tests_functional_test_suite.cc  65C02_tests_inc_inx_iny.cc  65C02_tests_interrupt.cc  65C02_tests_invalid_instruction.cc  65C02_tests_jmp.cc  65C02_tests_jsr.cc  65C02_tests_lda_ldy_ldx.cc  65C02_tests_load_program.cc  65C02_tests_lsr.cc  65C02_tests_nop.cc  65C02_tests_ora.cc  65C02_tests_phy_ply_phx_plx.cc  65C02_tests_pushpop.cc  65C02_tests_rol_ror.cc  65C02_tests_rti.cc  65C02_tests_rts.cc  65C02_tests_stz.cc  65C02_tests_trb.cc  65C02_tests_tsb.cc  65C02_tests_tx_ty.cc  65C02_tests_xxx_functional_test_suite.cc  CMakeCache.txt  CMakeLists.txt  Makefile  R65C02_tests_bbr_bbs.cc  R65C02_tests_rmb.cc  cmake_install.cmake
tests/src/: adc_tests.cc  and_tests.cc  asl_tests.cc  bit_tests.cc  branches_tests.cc  brk_tests.cc  cmp_tests.cc  decrement_tests.cc  eor_tests.cc  flags_tests.cc  functional_tests.cc  increment_tests.cc  interrupt_tests.cc  invalid_instruction_tests.cc  jmp_tests.cc  jsr_tests.cc  lda_ldx_ldy_tests.cc  load_program_tests.cc  lsr_tests.cc  nop_tests.cc  ora_tests.cc  pushpop_tests.cc  rol_ror_tests.cc  rti_tests.cc  rts_tests.cc  tx_ty_tests.cc
tools/: CMakeLists.txt  bin2hex.cc  debugger.script  process_opcodes.pl  tester.cc
